--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=SprintDeomo
 server.port = 8090
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/demodatabase
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url=jdbc:mysql://localhost:3306/demodatabase?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
